# lipidwrapper

./: .gitignore  README.md  TODO.md  pyproject.toml
examples/: example1.quick_test_from_equation  example2.from_equation  example3.from_image  example4.from_PDB_points  example5.from_DAE_file
lipidwrapper/: __init__.py  clash_removal.py  cli.py  file_io.py  hole_filling.py  lipid_positioning.py  molecule.py  multiprocessing_utils.py  numpy_extensions.py  output.py
tests/: conftest.py  test_cli.py  test_file_io.py  test_integration.py  test_lipid_positioning.py  test_molecule.py  test_multiprocessing_utils.py  test_numpy_extensions.py  test_output.py
